<resources>
    <string name="app_name">pLearn</string>
    <string name="app_full_name">PINKER:learn</string>
    <string name="enterSign">Вход</string>
    <string name="registrationSign">Регистрация</string>
    <string name="registrationGoto">Регистрация</string>
    <string name="loginGoto">Вход</string>
    <string name="loginMailHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="enterBtn">Войти</string>
    <string name="registrationBtn">Зарегистрироваться</string>
    <string name="confirmPasswordHint">Подтвердите пароль</string>
    <string name="emailHint">E-mail</string>
    <string name="loginHint">Имя пользователя</string>
    <string name="title_activity_battles">BattlesActivity</string>
    <string name="password_dont_match_error">Пароли не совпадают</string>
    <string name="empty_fields">Заполните все поля</string>
    <string name="something_went_wrong">Пользователь с таким ником или почтой уже существует.</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="inDeveloping">В процессе разработки</string>
    <string name="globalRating">Глобальный рейтинг</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="thisBattleQuestions">Вопросы этой дуэли</string>
    <string name="correctAnswers">правильных ответов</string>
    <string name="new_battle_btn">Новый поединок</string>
    <string name="currentBattles">Текущие бои</string>
    <string name="noGamesAvailable">У Вас нет игр</string>

    <!--Buttons in MainActivity-->
    <string name="battles">Сражения</string>
    <string name="summary">Конспекты</string>
    <string name="flashcards">Флешкарты</string>
    <string name="profile">Профиль</string>
    
    <!--Snackbar state-->
    <string name="correctSnackbar">Правильно!</string>
    <string name="wrongSnackbar">Тут ты не прав, дружище</string>
    <string name="timeIsOverSnackBar">Время вышло!</string>
</resources>
