<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".signUpActivity">

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:orientation="vertical"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:weightSum="5"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="fill_parent"-->
<!--tools:context=".signUpActivity">-->

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="5"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".signUpActivity">


        <TextView
            android:id="@+id/registrationBigTextView"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="8dp"
            android:text="@string/registrationSign"
            android:fontFamily="@font/sf_regular"
            android:textSize="36sp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="2"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/registrationUsernameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/loginHint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registrationEmailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registrationPasswordET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registrationConfirmPasswordET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/confirmPasswordHint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/errorsSignup"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"/>

            <Button
                android:id="@+id/registrationBtn"
                android:onClick="signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:text="@string/registrationBtn"
                android:textColor="#FFFFFF"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/button_blue_gradient"
                android:fontFamily="@font/sf_regular"/>

        </LinearLayout>


        <TextView
            android:id="@+id/gotoLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="60dp"
            android:text="@string/loginGoto"
            android:fontFamily="sans-serif-thin"
            android:onClick="jumpToLogin"
            android:layout_weight="1"/>

    </LinearLayout>

</ScrollView>